fix: support gitignore-style glob patterns in .synthesisignore (#324)
Path patterns with embedded / (e.g. .claude/worktrees/) and globs (e.g.
**/.archive/**) were silently ignored because matching only did component-name
string equality.

Each .synthesisignore line now compiles to a Predicate<Path> via
compileIgnorePattern(): bare names match any component at any depth (backward
compat); patterns with / or glob chars compile as root-anchored PathMatcher
globs with dummy-suffix probe for descendant-targeting patterns.

Tests: SynthesisIgnoreGlobTest (5 cases).